--- a/css/minugahan-a.webflow.css
+++ b/css/minugahan-a.webflow.css
@@ -401,6 +401,11 @@ p {
     padding-bottom: 20px;
   }
 
+  .section-medium {
+    padding-top: 60px;
+    padding-bottom: 60px;
+  }
+
   .container {
     padding-right: 15px;
     padding-left: 15px;
