--- a/css/minugahan-a.webflow.css
+++ b/css/minugahan-a.webflow.css
@@ -126,7 +126,7 @@ p {
   position: absolute;
   margin-bottom: -5px;
   padding: 5px 15px;
-  border: 1px solid #000;
+  border: 1px solid 226756 ;
   background-color: white;
   color: #226756;
 }
