--- a/css/minugahan-a.webflow.css
+++ b/css/minugahan-a.webflow.css
@@ -133,7 +133,7 @@ p {
   line-height: 1.2em;
 }
 
-@media (min-width:769px) {
+@media only screen and (min-width: 769px) {
   font-size: 20px;
 }
 
