--- a/css/minugahan-a.webflow.css
+++ b/css/minugahan-a.webflow.css
@@ -632,7 +632,7 @@ p {
 
   .size-block {
     min-width: 0px;
-    padding: 13px 8px;
+    padding: 13px 9px;
   }
 
   .grid-inch .size-block {
@@ -646,7 +646,7 @@ p {
   }
 
   .grid-size .inch-left-header {
-    font-size: 13px;
+    font-size: 13px !important;
   }
 
   .care_rich-text p {
