--- a/css/minugahan-a.webflow.css
+++ b/css/minugahan-a.webflow.css
@@ -645,7 +645,7 @@ p {
     min-height: auto !important;
   }
 
-  .size-block {
+  .inch-left-header .size-block {
     font-size: 13px !important;
   }
 
